// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildRawMulticallContract for chain 1 erc20 complex 1`] = `
{
  "byteCode": "0x60586200024060803960ff60e0600460d85f5f600460805f73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb485af1841b3d841b01815281013d5f823e3d015f5f600460845f73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb485af1841b3d841b01815281013d5f823e3d015f5f600460885f73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb485af1841b3d841b01815281013d5f823e3d015f5f6004608c5f73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb485af1841b3d841b01815281013d5f823e3d015f5f602460905f73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb485af1841b3d841b01815281013d5f823e3d015f5f602460b45f73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb485af1841b3d841b01815281013d5f823e3d015f5f600460805f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d015f5f600460845f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d015f5f600460885f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d015f5f6004608c5f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d015f5f602460905f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d015f5f602460b45f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d0160d8900360d8f306fdde0395d89b41313ce56718160ddd70a08231000000000000000000000000a3a7b6f88361f48403514059f1f16c8e78d60eec70a0823100000000000000000000000028c6c06298d514db089934071355e5743bf21d60",
  "splittedByteCodes": [
    "6058",
    "62000240",
    "6080",
    "39",
    "60ff",
    "60e0",
    "6004",
    "60d8",
    "5f",
    "5f",
    "6004",
    "6080",
    "5f",
    "73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "6084",
    "5f",
    "73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "6088",
    "5f",
    "73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "608c",
    "5f",
    "73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6024",
    "6090",
    "5f",
    "73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6024",
    "60b4",
    "5f",
    "73a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "6080",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "6084",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "6088",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6004",
    "608c",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6024",
    "6090",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "5f",
    "5f",
    "6024",
    "60b4",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "60d8",
    "90",
    "03",
    "60d8",
    "f3",
    "",
    "",
    "06fdde0395d89b41313ce56718160ddd70a08231000000000000000000000000a3a7b6f88361f48403514059f1f16c8e78d60eec70a0823100000000000000000000000028c6c06298d514db089934071355e5743bf21d60",
  ],
}
`;

exports[`buildRawMulticallContract for chain 1 erc20 complex 2`] = `"0x800000600000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000855534420436f696e0000000000000000000000000000000000000000000000008000006000000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000004555344430000000000000000000000000000000000000000000000000000000080000020000000000000000000000000000000000000000000000000000000000000000680000020000000000000000000000000000000000000000000000000005a9afec6a2aa60800000200000000000000000000000000000000000000000000000000000000000000000800000200000000000000000000000000000000000000000000000000000946e5d46833c800000600000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650656e646c650000000000000000000000000000000000000000000000000000800000600000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650454e444c45000000000000000000000000000000000000000000000000000080000020000000000000000000000000000000000000000000000000000000000000001280000020000000000000000000000000000000000000000000bfadbf953a8e088d5e9ce68000002000000000000000000000000000000000000000000011009602009976b7403ba5800000200000000000000000000000000000000000000000000d331ff1ff3cdae19b2127"`;

exports[`buildRawMulticallContract for chain 1 erc20 complex 3`] = `
[
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000855534420436f696e000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000045553444300000000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000006",
    "success": true,
  },
  {
    "result": "000000000000000000000000000000000000000000000000005a9afec6a2aa60",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000946e5d46833c",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650656e646c650000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650454e444c450000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000012",
    "success": true,
  },
  {
    "result": "000000000000000000000000000000000000000000bfadbf953a8e088d5e9ce6",
    "success": true,
  },
  {
    "result": "00000000000000000000000000000000000000000011009602009976b7403ba5",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000d331ff1ff3cdae19b2127",
    "success": true,
  },
]
`;

exports[`buildRawMulticallContract for chain 1 erc20 simple 1`] = `"0x70a08231000000000000000000000000a3a7b6f88361f48403514059f1f16c8e78d60eec"`;

exports[`buildRawMulticallContract for chain 1 erc20 simple 2`] = `
{
  "byteCode": "0x60246200004660803960ff60e0600460a45f5f602460805f73808507121b80c02388fad14726482e061b8da8275af1841b3d841b01815281013d5f823e3d0160a4900360a4f370a08231000000000000000000000000a3a7b6f88361f48403514059f1f16c8e78d60eec",
  "splittedByteCodes": [
    "6024",
    "62000046",
    "6080",
    "39",
    "60ff",
    "60e0",
    "6004",
    "60a4",
    "5f",
    "5f",
    "6024",
    "6080",
    "5f",
    "73808507121b80c02388fad14726482e061b8da827",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "5f",
    "82",
    "3e",
    "3d",
    "01",
    "60a4",
    "90",
    "03",
    "60a4",
    "f3",
    "",
    "",
    "70a08231000000000000000000000000a3a7b6f88361f48403514059f1f16c8e78d60eec",
  ],
}
`;

exports[`buildRawMulticallContract for chain 1 erc20 simple 3`] = `"0x8000002000000000000000000000000000000000000000000011009602009976b7403ba5"`;

exports[`buildRawMulticallContract for chain 1 erc20 simple 4`] = `
[
  {
    "result": "00000000000000000000000000000000000000000011009602009976b7403ba5",
    "success": true,
  },
]
`;

exports[`buildRawMulticallContract for chain 42161 erc20 complex 1`] = `
{
  "byteCode": "0x60586200027060803960ff60e0600460d86000600060046080600073fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb95af1841b3d841b01815281013d6000823e3d016000600060046084600073fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb95af1841b3d841b01815281013d6000823e3d016000600060046088600073fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb95af1841b3d841b01815281013d6000823e3d01600060006004608c600073fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb95af1841b3d841b01815281013d6000823e3d016000600060246090600073fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb95af1841b3d841b01815281013d6000823e3d0160006000602460b4600073fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb95af1841b3d841b01815281013d6000823e3d0160006000600460806000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d0160006000600460846000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d0160006000600460886000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d01600060006004608c6000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d0160006000602460906000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d0160006000602460b46000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d0160d8900360d8f306fdde0395d89b41313ce56718160ddd70a08231000000000000000000000000b38e8c17e38363af6ebdcb3dae12e0243582891d70a08231000000000000000000000000f89d7b9c864f589bbf53a82105107622b35eaa40",
  "splittedByteCodes": [
    "6058",
    "62000270",
    "6080",
    "39",
    "60ff",
    "60e0",
    "6004",
    "60d8",
    "6000",
    "6000",
    "6004",
    "6080",
    "6000",
    "73fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "6084",
    "6000",
    "73fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "6088",
    "6000",
    "73fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "608c",
    "6000",
    "73fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6024",
    "6090",
    "6000",
    "73fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6024",
    "60b4",
    "6000",
    "73fd086bc7cd5c481dcc9c85ebe478a1c0b69fcbb9",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "6080",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "6084",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "6088",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6004",
    "608c",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6024",
    "6090",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "6000",
    "6000",
    "6024",
    "60b4",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "60d8",
    "90",
    "03",
    "60d8",
    "f3",
    "",
    "",
    "06fdde0395d89b41313ce56718160ddd70a08231000000000000000000000000b38e8c17e38363af6ebdcb3dae12e0243582891d70a08231000000000000000000000000f89d7b9c864f589bbf53a82105107622b35eaa40",
  ],
}
`;

exports[`buildRawMulticallContract for chain 42161 erc20 complex 2`] = `"0x800000600000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000a546574686572205553440000000000000000000000000000000000000000000080000060000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000045553445400000000000000000000000000000000000000000000000000000000800000200000000000000000000000000000000000000000000000000000000000000006800000200000000000000000000000000000000000000000000000000001b91ca97c216a800000200000000000000000000000000000000000000000000000000000701c468c419e8000002000000000000000000000000000000000000000000000000000000efe3847eb84800000600000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650656e646c650000000000000000000000000000000000000000000000000000800000600000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650454e444c4500000000000000000000000000000000000000000000000000008000002000000000000000000000000000000000000000000000000000000000000000128000002000000000000000000000000000000000000000000010ac16ce5f49333b50845c8000002000000000000000000000000000000000000000000001eee0f293b6dc405a7874800000200000000000000000000000000000000000000000000000000000000000000000"`;

exports[`buildRawMulticallContract for chain 42161 erc20 complex 3`] = `
[
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000a5465746865722055534400000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000045553445400000000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000006",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000001b91ca97c216a",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000701c468c419e",
    "success": true,
  },
  {
    "result": "00000000000000000000000000000000000000000000000000000efe3847eb84",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650656e646c650000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000000650454e444c450000000000000000000000000000000000000000000000000000",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000012",
    "success": true,
  },
  {
    "result": "00000000000000000000000000000000000000000010ac16ce5f49333b50845c",
    "success": true,
  },
  {
    "result": "00000000000000000000000000000000000000000001eee0f293b6dc405a7874",
    "success": true,
  },
  {
    "result": "0000000000000000000000000000000000000000000000000000000000000000",
    "success": true,
  },
]
`;

exports[`buildRawMulticallContract for chain 42161 erc20 simple 1`] = `"0x70a08231000000000000000000000000b38e8c17e38363af6ebdcb3dae12e0243582891d"`;

exports[`buildRawMulticallContract for chain 42161 erc20 simple 2`] = `
{
  "byteCode": "0x60246200004a60803960ff60e0600460a460006000602460806000730c880f6761f1af8d9aa9c466984b80dab9a8c9e85af1841b3d841b01815281013d6000823e3d0160a4900360a4f370a08231000000000000000000000000b38e8c17e38363af6ebdcb3dae12e0243582891d",
  "splittedByteCodes": [
    "6024",
    "6200004a",
    "6080",
    "39",
    "60ff",
    "60e0",
    "6004",
    "60a4",
    "6000",
    "6000",
    "6024",
    "6080",
    "6000",
    "730c880f6761f1af8d9aa9c466984b80dab9a8c9e8",
    "5a",
    "f1",
    "84",
    "1b",
    "3d",
    "84",
    "1b",
    "01",
    "81",
    "52",
    "81",
    "01",
    "3d",
    "6000",
    "82",
    "3e",
    "3d",
    "01",
    "60a4",
    "90",
    "03",
    "60a4",
    "f3",
    "",
    "",
    "70a08231000000000000000000000000b38e8c17e38363af6ebdcb3dae12e0243582891d",
  ],
}
`;

exports[`buildRawMulticallContract for chain 42161 erc20 simple 3`] = `"0x8000002000000000000000000000000000000000000000000001eee0f293b6dc405a7874"`;

exports[`buildRawMulticallContract for chain 42161 erc20 simple 4`] = `
[
  {
    "result": "00000000000000000000000000000000000000000001eee0f293b6dc405a7874",
    "success": true,
  },
]
`;
